# sre-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  Dockerfile  README.md  RELEASE.md  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml  typos.toml
.github/ISSUE_TEMPLATE/: feature_or_integration_request.yml
.github/workflows/: ci.yml  publish.yml  scan-dependencies.yml
data/: incidents.jsonl
data/eval/: rag_golden.json
deploy/: check_server.sh  install_server.sh
deploy/examples/: tencent-cloud-cvm-2c2g.env
deploy/systemd/: sre-agent.service.example
docs/: sre-agent-upgrade-plan.md  业务日志格式规范.md  服务器部署说明.md  项目修改方向.md
docs/plans/: 2026-03-14-tencent-cloud-java-sre-agent-implementation.md  2026-03-14-tencent-cloud-java-sre-agent-mvp-design.md  2026-03-15-react-langgraph-autonomous-sre-agent.md
manual-check/: incidents-autonomous.jsonl  incidents.jsonl
src/sre_agent/: __init__.py  run.py
src/sre_agent/actions/: __init__.py  executor.py  playbooks.py
src/sre_agent/cli/: __init__.py  env.py  interactive_shell.py  main.py
src/sre_agent/config/: paths.py
src/sre_agent/core/: __init__.py  agent.py  cycle.py  interfaces.py  models.py  prompts.py  settings.py
src/sre_agent/deployment/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_business_detector.py  test_cli.py  test_code_retriever.py  test_cycle_models.py  test_deploy_readiness.py  test_graph_workflow.py  test_host_detector.py  test_java_detector.py  test_monitor_service.py  test_rag_eval.py  test_settings.py  test_storage.py  test_tool_registry.py
(+203 files in other folders)
