[project]
name = "sre-agent"
version = "0.2.0"
description = "A Site Reliability Engineer AI agent that can monitor application and infrastructure logs, diagnose issues, and report on diagnostics."
authors = [{ name = "Fuzzy Labs", email = "info@fuzzylabs.ai" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.42.39",
    "click>=8.3.1",
    "platformdirs>=4.5.1",
    "pydantic-ai>=1.51.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "rich>=14.3.2",
]

[project.scripts]
sre-agent = "sre_agent.cli.main:main"
sre-agent-run-tool-call-eval = "sre_agent.eval.tool_call.run:main"
sre-agent-run-diagnosis-quality-eval = "sre_agent.eval.diagnosis_quality.run:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
eval = [
    "opik>=1.10.38",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.11.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/sre_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
